--- a/simulation/GUI/giGUI.kv
+++ b/simulation/GUI/giGUI.kv
@@ -1,5 +1,6 @@
 #:kivy 1.10.0
 #:import np numpy
+#:import test kivy_test
 
 # All labels
 <Label>:
@@ -40,9 +41,12 @@
     # and specific input (right)
     Splitter:
         sizable_from: 'right'
-        max_size: root.width*0.98
+        max_size: root.width*0.9
         min_size: root.width*0.02
 
+
+
+        # Right side of splitter
         # Content of 'general input window'
         BoxLayout:
             orientation: 'vertical'
@@ -135,6 +139,8 @@
                             CheckBox:
                                 id: verbose_bool
 
+
+    # Left side of splitter
     TabbedPanel:
         # Content of 'tab windows'
 
@@ -154,4 +160,6 @@
                 Label:
                     text: 'bla'
                 Button:
-                    text: 'Button that does nothing'
+                    text: 'Raise error and display'
+                    #on_press: test.check_input()
+                    on_press: app.test()
