added handling of double numeric input

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -115,6 +115,7 @@
                                 help_message: "Step size of spectrum range [keV]."
                             FloatInput:
                                 id: spectrum_step
+                                text: '1.0'
                                 disabled: not spectrum_range_set.active
                                           # And not a spcetum file loaded!!!
 
