spectm file name correct in parameters

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -54,7 +54,7 @@
         pos: root.pos
         orientation: "vertical"
         FileChooserListView:
-            path: "./"
+            path: "./data/spectra/"
             id: spectrum_filechooser
 
         BoxLayout:
